[HMJ-17] Implement refresh-token handler
